# docker_transformation

./: .gitignore  Dockerfile  Makefile  README.md  dbt_project.yml  docker-compose.yml  pyproject.toml
models/production/: dim_currency.sql  dim_payment_service.sql  fct_deposit.sql  fct_payout.sql  schema.yml
models/staging/: bahigo_altpay_deposit.sql  schema.yml  stg_altpay_currency.sql  stg_altpay_deposit.sql  stg_altpay_payment_service.sql  stg_altpay_paymentservice.sql  stg_altpay_payout.sql  stg_bahigo_altpay_currency.sql  stg_bahigo_altpay_deposit.sql  stg_bahigo_altpay_paymentservice.sql
models/utilities/: dim_calendar.sql
src/: 01-preprocess_airbyte_data.py  01-preprocess_db.py  01-preprocessing_airbyte_data.py
src/common/: config.py  config_db.py  paths.py
