[tool.poetry]
name = "docker-transformation"
version = "0.1.0"
description = ""
authors = ["mvrckwong-bluedrive <maverickwong@bluedrive.ph>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dbt-clickhouse = "^1.8.4"
pandas = "^2.2.3"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
